--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
+  <ul>
+    <li>2 slices bread</li>
+    <li>4 slices cheese</li>
+    <li>1 tbsp of butter</li>
+  </ul>
   <!-- Write your HTML in this file -->
 
 </body>
