--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <ul>
-    <li>2 slices bread</li>
+    <li>2 slices ofbread</li>
     <li>4 slices cheese</li>
     <li>1 tbsp of butter</li>
   </ul>
