--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body>
   <ul>
     <li>2 slices of bread</li>
-    <li>4 slices cheese</li>
+    <li> 4 slices cheese</li>
+      <ul>cheddar</ul>
+      <ul>mozzarella</ul>
+      <ul>pepper jack</ul>
+    
     <li>1 tbsp of butter</li>
   </ul>
   <!-- Write your HTML in this file -->
