--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 <body>
   <ul>
     <li>2 slices of bread</li>
-    <li> 4 slices cheese</li>
-      <ul>cheddar</ul>
+    <li> 4 slices cheese
+      <ul>
+        <li>cheddar</li>
+        <li>mozzarella</li>
+        <li>pepper jack</li>
       <ul>mozzarella</ul>
       <ul>pepper jack</ul>
-    
+    </li>
     <li>1 tbsp of butter</li>
   </ul>
   <!-- Write your HTML in this file -->
