--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Write your HTML in this file -->
 <h3>Top 5 Favorite Foods</h3>
 <ol>
-  <li>Grilled Cheese</li>
+  <li>Spread</li>
   <li>Sushi</li>
   <li>Cheese and crackers</li>
   <li>Cheese soup</li>
